--- a/content/post/2019-08-06-extracting-etf-keywords-with-tf-idf.Rmd
+++ b/content/post/2019-08-06-extracting-etf-keywords-with-tf-idf.Rmd
@@ -3,6 +3,7 @@ title: Extracting ETF keywords with TF-IDF
 author: Aaron Miles
 date: '2019-08-06'
 slug: extracting-etf-keywords-with-tf-idf
+summary: Tf-idf can be an interesting way to extract keywords from text. In this post I use tidytext's implementation to extract keywords from ETF descriptions.
 categories:
   - Finance
 tags:
